# grocery_project

./: .gitignore  README.md  demo.py  demo_planogram.py  main.py  pyproject.toml  requirements.txt
classification/: dihe_pytorch.py  dihe_train.py  test_dihe.py
classification/eval/: build_reference_db.py  evaluate_arcface.py  evaluate_dihe.py  visualize_embeddings.py
classification/eval/outputs/: dihe_results.txt  metrics_fixed.txt
classification/training/: arcface_grocery_fixed.ipynb  arcface_grocery_fixed.json  arcface_grocery_fixed_v2.ipynb  arcface_grocery_fixed_v2.json  arcface_migros_v1.ipynb  dihe.ipynb  train_arcface_augmented.py  train_arcface_migros.ipynb
detection/: crop_products.py  inference_yolo.py  signal1.py
detection/eval/: eval_yolo11_SDP.py  eval_yolo11_SKU110K.py  eval_yolo11_grocery.py
detection/eval/sdp_results/: results.txt
detection/inference/: crop_products.py  detect_shelf.py  detection_inference.py
detection/training/: detection_train_yolov.json  detection_train_yolov11.ipynb
pipeline/: inference.py
planogram/: __init__.py  comparator.py  planogram.py
planogram/schemas/: golden_schema.json  milk_schema.json  pasta_schema.json  soda_schema.json
web_app/: app.py
web_app/static/css/: style.css
web_app/static/js/: main.js
web_app/templates/: index.html
