[project]
name = "grocery_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-multipart>=0.0.22",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.232",
    "umap-learn>=0.5.9.post2",
    "uvicorn>=0.42.0",
]
